--- a/GameEngline/GameEngline/GameEngline.vcxproj
+++ b/GameEngline/GameEngline/GameEngline.vcxproj
@@ -156,8 +156,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Circle.h" />
     <ClInclude Include="log.h" />
     <ClInclude Include="MainGame.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="Preferences.h" />
+    <ClInclude Include="Rectangle.h" />
+    <ClInclude Include="Thing.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
