--- a/GameEngline/GameEngline/GameEngline.vcxproj
+++ b/GameEngline/GameEngline/GameEngline.vcxproj
@@ -151,10 +151,13 @@
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Character.cpp" />
+    <ClCompile Include="Circle.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="log.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainGame.cpp" />
+    <ClCompile Include="Pref.cpp" />
+    <ClCompile Include="Rectangle.cpp" />
     <ClCompile Include="Stage.cpp" />
     <ClCompile Include="Thing.cpp" />
   </ItemGroup>
