--- a/GameEngline/GameEngline/GameEngline.vcxproj
+++ b/GameEngline/GameEngline/GameEngline.vcxproj
@@ -154,13 +154,12 @@
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Character.cpp" />
-    <ClCompile Include="Circle.cpp" />
+    <ClCompile Include="InputListener.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="log.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainGame.cpp" />
-    <ClCompile Include="Pref.cpp" />
-    <ClCompile Include="Rectangle.cpp" />
+    <ClCompile Include="Observer.cpp" />
     <ClCompile Include="Stage.cpp" />
     <ClCompile Include="Thing.cpp" />
   </ItemGroup>
@@ -168,9 +167,11 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="Circle.h" />
+    <ClInclude Include="InputListener.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="log.h" />
     <ClInclude Include="MainGame.h" />
+    <ClInclude Include="Observer.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Preferences.h" />
     <ClInclude Include="Rectangle.h" />
