--- a/GameEngline/GameEngline/GameEngline.vcxproj
+++ b/GameEngline/GameEngline/GameEngline.vcxproj
@@ -19,10 +19,14 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\AudioManager.h" />
     <ClInclude Include="source\bald.h" />
     <ClInclude Include="source\Camera.h" />
     <ClInclude Include="source\Character.h" />
+    <ClInclude Include="source\DrawableObject.h" />
     <ClInclude Include="source\Error.h" />
+    <ClInclude Include="source\Event.h" />
+    <ClInclude Include="source\EventManager.h" />
     <ClInclude Include="source\fileManager.h" />
     <ClInclude Include="source\GLSLProgram.h" />
     <ClInclude Include="source\GLTexture.h" />
@@ -31,6 +35,7 @@
     <ClInclude Include="source\maiden.h" />
     <ClInclude Include="source\MainGame.h" />
     <ClInclude Include="source\ninja.h" />
+    <ClInclude Include="source\Observer.h" />
     <ClInclude Include="source\Physic.h" />
     <ClInclude Include="source\pico.h" />
     <ClInclude Include="source\Player.h" />
@@ -40,15 +45,19 @@
     <ClInclude Include="source\Sprite.h" />
     <ClInclude Include="source\spriteBatch.h" />
     <ClInclude Include="source\Stage.h" />
+    <ClInclude Include="source\Subject.h" />
     <ClInclude Include="source\TextureCache.h" />
     <ClInclude Include="source\tile.h" />
     <ClInclude Include="source\Vertex.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="source\AudioManager.cpp" />
     <ClCompile Include="source\bald.cpp" />
     <ClCompile Include="source\Camera.cpp" />
     <ClCompile Include="source\Character.cpp" />
+    <ClCompile Include="source\DrawableObject.cpp" />
     <ClCompile Include="source\Error.cpp" />
+    <ClCompile Include="source\EventManager.cpp" />
     <ClCompile Include="source\fileManager.cpp" />
     <ClCompile Include="source\GLSLProgram.cpp" />
     <ClCompile Include="source\GLTexture.cpp" />
@@ -58,6 +67,7 @@
     <ClCompile Include="source\main.cpp" />
     <ClCompile Include="source\MainGame.cpp" />
     <ClCompile Include="source\ninja.cpp" />
+    <ClCompile Include="source\Observer.cpp" />
     <ClCompile Include="source\Physic.cpp" />
     <ClCompile Include="source\pico.cpp" />
     <ClCompile Include="source\Player.cpp" />
@@ -67,6 +77,7 @@
     <ClCompile Include="source\Sprite.cpp" />
     <ClCompile Include="source\spriteBatch.cpp" />
     <ClCompile Include="source\Stage.cpp" />
+    <ClCompile Include="source\Subject.cpp" />
     <ClCompile Include="source\sumrai.cpp" />
     <ClCompile Include="source\TextureCache.cpp" />
   </ItemGroup>
@@ -147,7 +158,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glew32.lib;SDL2.lib;SDL2main.lib;SDL2test.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glew32.lib;SDL2.lib;SDL2main.lib;SDL2test.lib;opengl32.lib;SDL2_mixer.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
