--- a/GameEngline/GameEngline/GameEngline.vcxproj
+++ b/GameEngline/GameEngline/GameEngline.vcxproj
@@ -19,67 +19,71 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="source\AudioManager.h" />
-    <ClInclude Include="source\bald.h" />
-    <ClInclude Include="source\Camera.h" />
-    <ClInclude Include="source\Character.h" />
-    <ClInclude Include="source\DrawableObject.h" />
-    <ClInclude Include="source\Error.h" />
-    <ClInclude Include="source\Event.h" />
-    <ClInclude Include="source\EventManager.h" />
-    <ClInclude Include="source\fileManager.h" />
-    <ClInclude Include="source\GLSLProgram.h" />
-    <ClInclude Include="source\GLTexture.h" />
-    <ClInclude Include="source\Hud.h" />
-    <ClInclude Include="source\ImageLoader.h" />
-    <ClInclude Include="source\inputManager.h" />
-    <ClInclude Include="source\maiden.h" />
-    <ClInclude Include="source\MainGame.h" />
-    <ClInclude Include="source\ninja.h" />
-    <ClInclude Include="source\Observer.h" />
-    <ClInclude Include="source\Physic.h" />
-    <ClInclude Include="source\pico.h" />
-    <ClInclude Include="source\Player.h" />
-    <ClInclude Include="source\Preferences.h" />
-    <ClInclude Include="source\ResourceManager.h" />
-    <ClInclude Include="source\samurai.h" />
-    <ClInclude Include="source\Sprite.h" />
-    <ClInclude Include="source\spriteBatch.h" />
-    <ClInclude Include="source\Stage.h" />
-    <ClInclude Include="source\Subject.h" />
-    <ClInclude Include="source\TextureCache.h" />
-    <ClInclude Include="source\tile.h" />
-    <ClInclude Include="source\Vertex.h" />
+    <ClInclude Include="AudioManager.h" />
+    <ClInclude Include="bald.h" />
+    <ClInclude Include="Camera.h" />
+    <ClInclude Include="Character.h" />
+    <ClInclude Include="DrawableObject.h" />
+    <ClInclude Include="Error.h" />
+    <ClInclude Include="Event.h" />
+    <ClInclude Include="EventManager.h" />
+    <ClInclude Include="fileManager.h" />
+    <ClInclude Include="GLSLProgram.h" />
+    <ClInclude Include="GLTexture.h" />
+    <ClInclude Include="Hud.h" />
+    <ClInclude Include="ImageLoader.h" />
+    <ClInclude Include="inputManager.h" />
+    <ClInclude Include="maiden.h" />
+    <ClInclude Include="MainGame.h" />
+    <ClInclude Include="MovableObject.h" />
+    <ClInclude Include="ninja.h" />
+    <ClInclude Include="Observer.h" />
+    <ClInclude Include="Physic.h" />
+    <ClInclude Include="pico.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="Preferences.h" />
+    <ClInclude Include="ResourceManager.h" />
+    <ClInclude Include="samurai.h" />
+    <ClInclude Include="Sprite.h" />
+    <ClInclude Include="spriteBatch.h" />
+    <ClInclude Include="Stage.h" />
+    <ClInclude Include="Subject.h" />
+    <ClInclude Include="TextureCache.h" />
+    <ClInclude Include="tile.h" />
+    <ClInclude Include="UnmovableObject.h" />
+    <ClInclude Include="Vertex.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="source\AudioManager.cpp" />
-    <ClCompile Include="source\bald.cpp" />
-    <ClCompile Include="source\Camera.cpp" />
-    <ClCompile Include="source\Character.cpp" />
-    <ClCompile Include="source\DrawableObject.cpp" />
-    <ClCompile Include="source\Error.cpp" />
-    <ClCompile Include="source\EventManager.cpp" />
-    <ClCompile Include="source\fileManager.cpp" />
-    <ClCompile Include="source\GLSLProgram.cpp" />
-    <ClCompile Include="source\Hud.cpp" />
-    <ClCompile Include="source\ImageLoader.cpp" />
-    <ClCompile Include="source\inputManager.cpp" />
-    <ClCompile Include="source\maiden.cpp" />
-    <ClCompile Include="source\main.cpp" />
-    <ClCompile Include="source\MainGame.cpp" />
-    <ClCompile Include="source\ninja.cpp" />
-    <ClCompile Include="source\Observer.cpp" />
-    <ClCompile Include="source\Physic.cpp" />
-    <ClCompile Include="source\pico.cpp" />
-    <ClCompile Include="source\Player.cpp" />
-    <ClCompile Include="source\Pref.cpp" />
-    <ClCompile Include="source\ResourceManager.cpp" />
-    <ClCompile Include="source\samurai.cpp" />
-    <ClCompile Include="source\Sprite.cpp" />
-    <ClCompile Include="source\spriteBatch.cpp" />
-    <ClCompile Include="source\Stage.cpp" />
-    <ClCompile Include="source\Subject.cpp" />
-    <ClCompile Include="source\TextureCache.cpp" />
+    <ClCompile Include="AudioManager.cpp" />
+    <ClCompile Include="bald.cpp" />
+    <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Character.cpp" />
+    <ClCompile Include="DrawableObject.cpp" />
+    <ClCompile Include="Error.cpp" />
+    <ClCompile Include="EventManager.cpp" />
+    <ClCompile Include="fileManager.cpp" />
+    <ClCompile Include="GLSLProgram.cpp" />
+    <ClCompile Include="Hud.cpp" />
+    <ClCompile Include="ImageLoader.cpp" />
+    <ClCompile Include="inputManager.cpp" />
+    <ClCompile Include="maiden.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="MainGame.cpp" />
+    <ClCompile Include="MovableObject.cpp" />
+    <ClCompile Include="ninja.cpp" />
+    <ClCompile Include="Observer.cpp" />
+    <ClCompile Include="Physic.cpp" />
+    <ClCompile Include="pico.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Pref.cpp" />
+    <ClCompile Include="ResourceManager.cpp" />
+    <ClCompile Include="samurai.cpp" />
+    <ClCompile Include="Sprite.cpp" />
+    <ClCompile Include="spriteBatch.cpp" />
+    <ClCompile Include="Stage.cpp" />
+    <ClCompile Include="Subject.cpp" />
+    <ClCompile Include="TextureCache.cpp" />
+    <ClCompile Include="UnmovableObject.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{FCFB9844-8724-4D2B-8E3D-C2001157920E}</ProjectGuid>
