--- a/GameEngline/GameEngline/GameEngline.vcxproj
+++ b/GameEngline/GameEngline/GameEngline.vcxproj
@@ -48,6 +48,7 @@
     <ClInclude Include="samurai.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="spriteBatch.h" />
+    <ClInclude Include="SpriteFont.h" />
     <ClInclude Include="Stage.h" />
     <ClInclude Include="stageBin.h" />
     <ClInclude Include="Subject.h" />
@@ -85,6 +86,7 @@
     <ClCompile Include="samurai.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="spriteBatch.cpp" />
+    <ClCompile Include="SpriteFont.cpp" />
     <ClCompile Include="Stage.cpp" />
     <ClCompile Include="stageBin.cpp" />
     <ClCompile Include="Subject.cpp" />
